# QtDemo

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doc/: Qt.eapx  Qt.ldb
widgets/: CMakeLists.txt
widgets/itemviews/: CMakeLists.txt
widgets/itemviews/dirview/: CMakeLists.txt  main.cpp
widgets/itemviews/spinboxdelegate/: CMakeLists.txt  main.cpp  spinbox_delegate.cpp  spinbox_delegate.h
